--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,3 +14,57 @@
 
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
+
+
+<!-- Zotero Metadata -->
+{% if page.title %}
+<meta name="citation_title" content="{{ page.title | escape }}">
+<meta name="dc.title" content="{{ page.title | escape }}">
+{% endif %}
+
+{% if page.authors %}
+  {% for a in page.authors %}
+  <meta name="citation_author" content="{{ a | escape }}">
+  <meta name="dc.creator" content="{{ a | escape }}">
+  {% endfor %}
+{% endif %}
+
+{% if page.date %}
+<meta name="citation_publication_date" content="{{ page.date | date: '%Y/%m/%d' }}">
+<meta name="dc.date" content="{{ page.date | date_to_xmlschema }}">
+{% endif %}
+
+{% if page.venue %}
+  {% if page.venue_type == 'journal' %}
+  <meta name="citation_journal_title" content="{{ page.venue | escape }}">
+  {% elsif page.venue_type == 'conference' %}
+  <meta name="citation_conference_title" content="{{ page.venue | escape }}">
+  {% else %}
+  <meta name="citation_publisher" content="{{ page.venue | escape }}">
+  {% endif %}
+{% endif %}
+
+{% if page.volume %}<meta name="citation_volume" content="{{ page.volume | escape }}">{% endif %}
+{% if page.issue %}<meta name="citation_issue" content="{{ page.issue | escape }}">{% endif %}
+{% if page.firstpage %}<meta name="citation_firstpage" content="{{ page.firstpage | escape }}">{% endif %}
+{% if page.lastpage %}<meta name="citation_lastpage" content="{{ page.lastpage | escape }}">{% endif %}
+
+{% if page.doi %}
+<meta name="citation_doi" content="{{ page.doi | escape }}">
+<meta name="dc.identifier" content="doi:{{ page.doi | escape }}">
+{% endif %}
+
+<link rel="canonical" href="{{ page.url | absolute_url }}">
+<meta name="citation_public_url" content="{{ page.url | absolute_url }}">
+
+{% if page.pdf %}
+<meta name="citation_pdf_url" content="{{ page.pdf | absolute_url }}">
+{% endif %}
+
+{% if page.abstract %}
+<meta name="citation_abstract" content="{{ page.abstract | strip_html | normalize_whitespace | escape }}">
+{% endif %}
+
+{% if page.language %}
+<meta name="citation_language" content="{{ page.language | escape }}">
+{% endif %}
